[package]
name = "human-sort"
version = "0.1.8"
authors = ["Vlad Nagikh <paradakh@protonmail.com>"]
license = "MIT"
repository = "https://github.com/vladnagih/human-sort"
description = "Human sort (natural sort) implementation"
keywords = ["sort", "natural", "human", "order"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "https://github.com/vladnagih/human-sort", branch = "master" }

[dependencies]
